--- a/primary.html
+++ b/primary.html
@@ -9,7 +9,7 @@
     <h1>Number Guessing Game</h1>
     <br>
     <div>
-        <h2>I Am A Number Between 1 And 100. Guess Which Number I Am. You Have 15 Guesses</h2>
+        <h2>I Am A Number Between 1 And 100. Guess Which Number I Am. You Have 15 Guesses.</h2>
         <br>
         <label>Number Of Guesses Left:</label>
         <br>
